# terminal2048

./: README.md  pyproject.toml
term_2048/: term_2048.py
tests/: test_term_2048.py
